opam-version: "2.0"
name: "base58"
synopsis: "Base58 converters"
version: "1.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/bs_api"
doc: "https://vbmithr.github.io/ocaml-base58/doc"
license: "ISC"
dev-repo: "git+https://github.com/vbmithr/ocaml-base58.git"
bug-reports: "https://github.com/vbmithr/ocaml-base58/issues"
tags: []
depends: [
  "ocaml" {>= "4.03.0"}
  "zarith" {>= "1.4.1"}
  "digestif" {>= "0.3"}
]
build: ["dune" "build" "-p" name "-j" jobs]